Fix button text misaligned when icon doesn't exist

--- a/src/app/modules/_core/button/button.component.css
+++ b/src/app/modules/_core/button/button.component.css
@@ -17,10 +17,6 @@
   margin-right: auto;
 }
 
-.text {
-  margin-right: auto;
-}
-
 .app-button.button.outlined {
   background-color: transparent;
   border: solid;
